# push_swap

./: CMakeLists.txt  Makefile  README.md  author  auto_make  checker  push_swap  push_swap_ex
checker/: Makefile  auto_make  checker  get_next_line.c  main.c
checker_sources/: Makefile  get_next_line.c  main.c
includes/: checker.h  errors.h  get_next_line.h  libft.h  push_swap.h  structures.h  visualization.h
includes/ft_printf/: defines.h  ft_printf.h  structures_pf.h
push_swap/: main.c
push_swap/algorithm/: add_operation.c  algorithm.c  mediana_search.c  optimization.c  primitive_sorting.c  print_operations.c
push_swap/errors/: push_swap_log.c
push_swap/initialization/: initialization.c  new_list.c
push_swap/operations/: reverse_rotate.c  rotate.c  swap.c
push_swap/validation/: validation.c
sources/: a.out  debug.c  list.c  log.c  main.c  new_list.c  operations.c  print.c  push_swap_log.c  ra.c  sa.c  stack_a.c  validate.c  validation.c
sources/algorithm/: add_operation.c  algorithm.c  mediana_search.c  optimization.c  primitive_sorting.c  print_operations.c  sorting_stack_a.c  sorting_stack_b.c
sources/checker/: a.out  a.sh  get_next_line.c  get_next_line.h.gch  main.c
sources/errors/: push_swap_log.c
sources/flags/: sa.c
sources/free/: push_swap_free.c
sources/initialization/: get_elements.c  get_indexes.c  initialization.c  new_list.c
sources/misc/: ft_atoi.c
sources/operations/: push.c  reverse_rotate.c  rotate.c  swap.c
sources/validation/: after_validation.c  validation.c
sources/visualization/: _drawing.c  b_drawing.c  create_window.c  drawing.c  utils.c
(+66 files in other folders)
